# pybind11_demo

./: .gitignore  README.md  environment.yml  meson.build  pyproject.toml
.github/workflows/: main.yml
pybind11_demo/: __init__.py
python_bindings/: bindings.cpp
src/pybind11_demo.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test_add.py
tests/: test_add.py
