[project]
name = "pybind11_demo"
version = "1.0"
description="Demo Python Bindings"
authors = [{name = "Daivik Karbhari", email="daivikkarbhari01@gmail.com"}]
dependencies=["pybind11>=2.12.0"]
requires-python = ">=3.9"
readme = 'README.md'
license = {file = 'LICENSE.txt'}


[build-system]
requires = ["pybind11","meson-python"]
build-backend= "mesonpy"

# [tool.mesonpy]
# module = "pybind11_demo"